Size fixes for some things being too small
1. new CV addressing option goes into newline, increase box by 3px
2. ranges get very tiny input boxes, increase max form size by 44px
3. share window has hr/line cross text below it, increase height by 15px

--- a/html/css/less/addressings.less
+++ b/html/css/less/addressings.less
@@ -20,7 +20,7 @@
       }
 
       .main-form-container {
-        width: 438px;
+        width: 441px;
         padding-right: 3px;
 
         label {
